fix: link overflow

--- a/src/styles/prose.scss
+++ b/src/styles/prose.scss
@@ -40,6 +40,9 @@
 
   a {
     @apply text-accent font-normal no-underline hover:underline;
+
+    word-break: break-word;
+    word-wrap: break-word;
   }
 
   img {
